# tech_lecture_dp_example

./: .gitignore  README.md  instructions.md  pyproject.toml
api/: server.py
mock_setup/dp-myparadigm/: README.md  pyproject.toml
mock_setup/dp-myparadigm/api/: server.py
mock_setup/dp-myparadigm/myparadigm/: paradigm.py
mock_setup/dp-myparadigm/myparadigm/utils/: logging.py
mymodule/: main.py
mymodule/utils/: logging.py
scripts/: mock_setup_script.py  show_xdf_content.py  telpy.py
