[project]
name = "dp-myparadigm"
version = "0.0.1"
description = "Example paradigm module for Dareplane - visual cue with keyboard response"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dareplane-utils>=0.0.15",
  "fire>=0.7.0",
  "pyglet>=2.0.0",
  "pylsl>=1.16.0",
  "numpy>=1.24.0",
]
