[project]
name = "dp-myparadigm"
version = "0.0.1"
description = "Example paradigm module for Dareplane - visual cue with keyboard response"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dareplane-utils>=0.0.21",
  "fire>=0.7.1",
  "pyglet>=2.1.14",
  "pylsl>=1.18.1",
  "numpy>=2.4.4",
]
